--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -144,6 +144,8 @@ blockscout:
       _default: 'true'
     APPS:
       _default: '[{"title": "Marketplace", "url": "/apps", "embedded?": true}]'
+    SESSION_COOKIE_DOMAIN:
+      _default: blockscout-main.aws-k8s.blockscout.com
 
 postgres:
   enabled: true
