--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -12,7 +12,6 @@ env:
   K8S_PORT: ${{ secrets.K8S_PORT }}
   USERNAME: ${{ secrets.USERNAME }}
   BASTION_SSH_KEY: ${{secrets.BASTION_SSH_KEY}}
-  K8S_DOMAIN: blockscout-main.test.aws-k8s.blockscout.com
 
 jobs:
   push_to_registry:
@@ -69,6 +68,8 @@ jobs:
     name: Deploy frontend app
     needs: push_to_registry
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
+    env:
+      K8S_DOMAIN: blockscout-main.test.aws-k8s.blockscout.com
     with:
       env_vars: VALUES_DIR=deploy/values/review,APP_NAME=bs-stack,DOCKER_IMAGE=prerelease-$GITHUB_EVENT_PULL_REQUEST_HEAD_SHA_SHORT
       globalEnv: review
