--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -69,12 +69,12 @@ jobs:
     needs: push_to_registry
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
-      env_vars: VALUES_DIR=deploy/values/review,APP_NAME=bs-stack,DOCKER_IMAGE=prerelease-$GITHUB_REF_NAME_SLUG
+      env_vars: VALUES_DIR=deploy/values/review,APP_NAME=bs-stack,DOCKER_IMAGE=prerelease-$GITHUB_REF_NAME_SLUG,K8S_DOMAIN=blockscout-main.test.aws-k8s.blockscout.com
       globalEnv: review
       appNamespace: review-front-$GITHUB_REF_NAME_SLUG
-      blockscoutIngressHost: blockscout
-      frontendIngressHost: blockscout
+      blockscoutIngressHost: review-front
+      frontendIngressHost: review-front
       frontendImage: ghcr.io/blockscout/frontend:prerelease-$GITHUB_REF_NAME_SLUG
-      gethIngressHost: geth
-      scVerifierIngressHost: sc-verifier
+      gethIngressHost: review-front-geth
+      scVerifierIngressHost: review-front-sc-verifier
     secrets: inherit
