--- a/.github/workflows/publish-docker-image-and-deploy.yml
+++ b/.github/workflows/publish-docker-image-and-deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      # - fix-session-cookie-review
+      - fix-session-cookie-review
 
 env:
   K8S_LOCAL_PORT: ${{ secrets.K8S_LOCAL_PORT }}
