--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -69,7 +69,7 @@ jobs:
     needs: push_to_registry
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
-      env_vars: VALUES_DIR=deploy/values/review,APP_NAME=bs-stack,DOCKER_IMAGE=prerelease-$GITHUB_REF_NAME_SLUG,K8S_DOMAIN=blockscout-main.test.aws-k8s.blockscout.com
+      env_vars: VALUES_DIR=deploy/values/review,APP_NAME=bs-stack,DOCKER_IMAGE=prerelease-$GITHUB_REF_NAME_SLUG
       globalEnv: review
       appNamespace: review-front-$GITHUB_REF_NAME_SLUG
       blockscoutIngressHost: review-front
@@ -78,3 +78,4 @@ jobs:
       gethIngressHost: review-front-geth
       scVerifierIngressHost: review-front-sc-verifier
     secrets: inherit
+    #K8S_DOMAIN=blockscout-main.test.aws-k8s.blockscout.com
