--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bignumber.js": "^9.1.0",
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
+    "dom-to-image": "^2.6.0",
     "ethers": "^5.7.1",
     "framer-motion": "^6.5.1",
     "lodash": "^4.0.0",
@@ -64,6 +65,7 @@
     "@svgr/webpack": "^6.5.1",
     "@testing-library/react": "^13.4.0",
     "@types/d3": "^7.4.0",
+    "@types/dom-to-image": "^2.6.4",
     "@types/jest": "^29.2.0",
     "@types/node": "17.0.36",
     "@types/phoenix": "^1.5.4",
