--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -324,6 +324,8 @@ frontend:
         - "/token"
         - "/tokens"
         - "/accounts"
+        - "/test1"
+        - "/test2"
 
   resources:
     limits:
