--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pino-http": "^8.2.1",
     "pino-pretty": "^9.1.1",
     "qrcode": "^1.5.1",
+    "rapidoc": "^9.3.4",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
