--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test:jest:watch": "jest --watch"
   },
   "dependencies": {
-    "@chakra-ui/react": "2.4.3",
-    "@chakra-ui/theme-tools": "^2.0.14",
+    "@chakra-ui/react": "2.3.1",
+    "@chakra-ui/theme-tools": "2.0.11",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@metamask/providers": "^10.2.1",
