--- a/deploy/values/review-l2/values.yaml
+++ b/deploy/values/review-l2/values.yaml
@@ -39,6 +39,7 @@ frontend:
         - "/api-docs"
         - "/csv-export"
         - "/output-roots"
+        - "/withdrawals"
 
   resources:
     limits:
