--- a/deploy/values/l2-optimism-goerli/values.yaml
+++ b/deploy/values/l2-optimism-goerli/values.yaml
@@ -309,6 +309,7 @@ frontend:
         - "/address"
         - "/stats"
         - "/token"
+        - "/output-roots"
   resources:
     limits:
       memory:
