--- a/deploy/values/review-l2/values.yaml
+++ b/deploy/values/review-l2/values.yaml
@@ -38,6 +38,7 @@ frontend:
         - "/visualize"
         - "/api-docs"
         - "/csv-export"
+        - "/output-roots"
 
   resources:
     limits:
