--- a/.github/workflows/publish-docker-image-and-deploy.yml
+++ b/.github/workflows/publish-docker-image-and-deploy.yml
@@ -3,7 +3,7 @@ name: Publish Docker image on every push to main branch
 on:
   push:
     branches:
-      - main
+      - nz-helmfile
 
 env:
   K8S_LOCAL_PORT: ${{ secrets.K8S_LOCAL_PORT }}
@@ -52,24 +52,20 @@ jobs:
             GIT_COMMIT_SHA=${{ env.SHORT_SHA }}
 
   deploy_main:
-    name: Deploy frontend
+    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy_helmfile.yaml@master
     needs: push_to_registry
-    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
-      env_vars: VALUES_DIR=deploy/values/main,APP_NAME=bs-stack
+      appName: front
       globalEnv: main
-      appNamespace: front-main
-      blockscoutIngressHost: blockscout
-      frontendIngressHost: blockscout
-      frontendImage: ghcr.io/blockscout/frontend:main
-      gethIngressHost: geth
-      scVerifierIngressHost: sc-verifier
+      helmfileDir: deploy
+      kubeConfigSecret: ci/data/dev/kubeconfig/k8s-dev
+      vaultRole: ci-dev
     secrets: inherit
-  deploy_l2:
-    name: Deploy frontend (L2)
-    needs: push_to_registry
-    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
-    with:
-      env_vars: VALUES_DIR=deploy/values/l2-optimism-goerli,APP_NAME=bs-stack
-      appNamespace: tests-optimism-goerli
-    secrets: inherit
+#  deploy_l2:
+#    name: Deploy frontend (L2)
+#    needs: push_to_registry
+#    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
+#    with:
+#      env_vars: VALUES_DIR=deploy/values/l2-optimism-goerli,APP_NAME=bs-stack
+#      appNamespace: tests-optimism-goerli
+#    secrets: inherit
