Review deploy to helmfile

--- a/deploy/helmfile.yaml
+++ b/deploy/helmfile.yaml
@@ -14,6 +14,7 @@ repositories:
     url: https://bedag.github.io/helm-charts
 
 releases:
+  # Deploy front-main
   - name: bs-stack
     chart: blockscout-ci-cd/blockscout-stack
     namespace: front-main
@@ -23,6 +24,7 @@ releases:
     - values/main/values.yaml
     - global:
         env: "main"
+  # Deploy l2-optimism-goerli
   - name: bs-stack
     chart: blockscout-ci-cd/blockscout-stack
     namespace: l2-optimism-goerli
@@ -32,6 +34,7 @@ releases:
     - values/l2-optimism-goerli/values.yaml
     - global:
         env: "optimism-goerli"
+  # Deploy review L2
   - name: reg-secret
     chart: bedag/raw
     namespace: review-l2-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
@@ -53,5 +56,29 @@ releases:
       app: review-l2-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
     values:
     - values/review-l2/values.yaml.gotmpl
+    - global:
+        env: "review"
+  # Deploy review
+  - name: reg-secret
+    chart: bedag/raw
+    namespace: review-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
+    labels:
+      app: review-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
+    values:
+      - resources:
+        - apiVersion: v1
+          data:
+            .dockerconfigjson: ref+vault://deployment-values/blockscout/common?token_env=VAULT_TOKEN&address=https://vault.k8s.blockscout.com#/dockerRegistryCreds
+          kind: Secret
+          metadata:
+            name: regcred
+          type: kubernetes.io/dockerconfigjson
+  - name: bs-stack
+    chart: blockscout-ci-cd/blockscout-stack
+    namespace: review-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
+    labels:
+      app: review-{{ requiredEnv "GITHUB_REF_NAME_SLUG" }}
+    values:
+    - values/review/values.yaml.gotmpl
     - global:
         env: "review"
