--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -58,7 +58,7 @@ jobs:
   deploy_review:
     name: Deploy review
     needs: push_to_registry
-    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy_helmfile.yaml@nz-review-depl-url
+    uses: blockscout/blockscout-ci-cd/.github/workflows/deploy_helmfile.yaml@master
     with:
       appName: review-$GITHUB_REF_NAME_SLUG
       globalEnv: review
