setup and graph for swap

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@web3modal/react": "^2.0.0-rc.2",
     "bignumber.js": "^9.1.0",
     "chakra-react-select": "^4.4.3",
+    "cytoscape": "^3.25.0",
+    "cytoscape-dagre": "^2.5.0",
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
@@ -69,6 +71,7 @@
     "pino-pretty": "^9.1.1",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
@@ -86,6 +89,7 @@
     "@testing-library/react": "^13.4.0",
     "@total-typescript/ts-reset": "^0.3.7",
     "@types/csp-dev": "^1.0.0",
+    "@types/cytoscape-dagre": "^2.3.0",
     "@types/d3": "^7.4.0",
     "@types/dom-to-image": "^2.6.4",
     "@types/jest": "^29.2.0",
@@ -95,6 +99,7 @@
     "@types/phoenix": "^1.5.4",
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.9",
+    "@types/react-cytoscapejs": "^1.2.2",
     "@types/react-dom": "18.0.5",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/swagger-ui-react": "^4.11.0",
