--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -9,14 +9,22 @@ on:
 
 jobs:
   cleanup:
-    uses: blockscout/blockscout-ci-cd/.github/workflows/cleanup.yaml@master
+    uses: blockscout/blockscout-ci-cd/.github/workflows/cleanup.yaml@nz-cleanup-fix
     with:
-      appNamespace: review-front-$GITHUB_REF_NAME_SLUG
+      appName: review-l2-$GITHUB_REF_NAME_SLUG
+      globalEnv: review
+      helmfileDir: deploy
+      kubeConfigSecret: ci/data/dev/kubeconfig/k8s-dev
+      vaultRole: ci-dev
       dockerImage: prerelease-$GITHUB_REF_NAME_SLUG
     secrets: inherit
   cleanup_l2:
-    uses: blockscout/blockscout-ci-cd/.github/workflows/cleanup.yaml@master
+    uses: blockscout/blockscout-ci-cd/.github/workflows/cleanup.yaml@nz-cleanup-fix
     with:
-      appNamespace: review-front-l2-$GITHUB_REF_NAME_SLUG
+      appName: review-$GITHUB_REF_NAME_SLUG
+      globalEnv: review
+      helmfileDir: deploy
+      kubeConfigSecret: ci/data/dev/kubeconfig/k8s-dev
+      vaultRole: ci-dev
       dockerImage: prerelease-$GITHUB_REF_NAME_SLUG
     secrets: inherit
