Fixing e2e tests branch ref

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -93,5 +93,5 @@ jobs:
           repo: blockscout-ci-cd
           github_token: ${{env.WORKFLOW_TRIGGER_TOKEN}}
           workflow_file_name: e2e_new.yaml
-          ref: main
+          ref: master
           wait_interval: 30
