Inherit secrets for e2e

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -89,3 +89,4 @@ jobs:
   test:
     needs: deploy_e2e
     uses: blockscout/blockscout-ci-cd/.github/workflows/e2e_new.yaml@master
+    secrets: inherit
