--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,65 +2,63 @@ name: Run E2E tests k8s
 
 on:
   push:
-    branches:
-      - nz-e2e-fix
-    #tags:
-    #  - '*'
+    tags:
+      - '*'
   workflow_dispatch:
 
 jobs:
-#  push_to_registry:
-#    name: Push Docker image to registry
-#    runs-on: ubuntu-latest
-#    outputs:
-#      shortSha: ${{ steps.output-step.outputs.short-sha }}
-#      tags: ${{ steps.meta.outputs.tags }}
-#    steps:
-#      - name: Check out the repo
-#        uses: actions/checkout@v3
+  push_to_registry:
+    name: Push Docker image to registry
+    runs-on: ubuntu-latest
+    outputs:
+      shortSha: ${{ steps.output-step.outputs.short-sha }}
+      tags: ${{ steps.meta.outputs.tags }}
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v4.4.1
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v4.4.1
 
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       # Will automatically make nice tags, see the table here https://github.com/docker/metadata-action#basic
-#      - name: Docker meta
-#        id: meta
-#        uses: docker/metadata-action@v4
-#        with:
-#          images: ghcr.io/blockscout/frontend
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/blockscout/frontend
 
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-#      - name: Add SHORT_SHA env property with commit short sha
-#        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
-#      - name: Add outputs
-#        run: |
-#          echo "::set-output name=short-sha::${{ env.GITHUB_EVENT_PULL_REQUEST_HEAD_SHA_SHORT }}"
-#        id: output-step
+      - name: Add outputs
+        run: |
+          echo "::set-output name=short-sha::${{ env.GITHUB_EVENT_PULL_REQUEST_HEAD_SHA_SHORT }}"
+        id: output-step
 
-#      - name: Build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          cache-from: type=gha
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
-#          build-args: |
-#            GIT_COMMIT_SHA=${{ env.SHORT_SHA }}
-#            GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          cache-from: type=gha
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            GIT_COMMIT_SHA=${{ env.SHORT_SHA }}
+            GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
   deploy_e2e:
-#    needs: push_to_registry
+    needs: push_to_registry
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
