migrate to Rainbowkit

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@emotion/styled": "^11.10.4",
     "@metamask/providers": "^10.2.1",
     "@monaco-editor/react": "^4.4.6",
+    "@rainbow-me/rainbowkit": "^1",
     "@sentry/nextjs": "^7.12.1",
     "@sentry/react": "^7.24.0",
     "@sentry/tracing": "^7.24.0",
@@ -47,8 +48,6 @@
     "@tanstack/react-query-devtools": "^4.0.10",
     "@types/papaparse": "^5.3.5",
     "@types/react-scroll": "^1.8.4",
-    "@web3modal/ethereum": "^2.4.1",
-    "@web3modal/react": "^2.4.1",
     "bignumber.js": "^9.1.0",
     "chakra-react-select": "^4.4.3",
     "crypto-js": "^4.1.1",
