--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,3 +22,10 @@ jobs:
         uses: "./.github/workflows/e2e-tests.yml"
         secrets: inherit
 
+    label_issues:
+        name: Add pre-release label to issues
+        uses: './.github/workflows/label-issues-in-release.yml'
+        with:
+            tag: ${{ github.ref_name }}
+            label_name: 'pre-release'
+        secrets: inherit
