[skip ci] error message tweak

--- a/.github/workflows/label-issues-in-release.yml
+++ b/.github/workflows/label-issues-in-release.yml
@@ -89,7 +89,7 @@ jobs:
                         );
 
                         if (releases[0].tagName !== process.env.TAG) {
-                            core.setFailed(`Release with tag ${ process.env.TAG } does not exist.`);
+                            core.setFailed(`Release with tag ${ process.env.TAG } is not latest one.`);
                             return;
                         }
 
