--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build:docker": "docker build --build-arg GIT_COMMIT_SHA=$(git rev-parse HEAD) -t blockscout-frontend ./",
     "start": "next start",
     "start:docker:local": "docker run -p 3000:3000 --env-file .env.local blockscout-frontend",
-    "start:docker:poa_core": "docker run -p 3000:3000 --env-file ./configs/envs/.env.poa_core --env-file ./configs/envs/.env.secrets blockscout-frontend",
+    "start:docker:main": "docker run -p 3000:3000 --env-file ./configs/envs/.env.main --env-file ./configs/envs/.env.secrets blockscout-frontend",
+    "start:docker:eth_goerli": "docker run -p 3000:3000 --env-file ./configs/envs/.env.eth_goerli --env-file ./configs/envs/.env.secrets blockscout-frontend",
     "lint:eslint": "./node_modules/.bin/eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:eslint:fix": "./node_modules/.bin/eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "lint:tsc": "./node_modules/.bin/tsc -p ./tsconfig.json",
