--- a/configs/envs/.env.pw
+++ b/configs/envs/.env.pw
@@ -1,4 +1,7 @@
 # Set of ENVs for Playwright components tests
+# 
+# be aware that ALL ENVs should be present in order to make a correct variables list for the browser
+# leave empty values for the ones that are not required
 
 # app configuration
 NEXT_PUBLIC_APP_PROTOCOL=http
@@ -45,6 +48,8 @@ NEXT_PUBLIC_APP_INSTANCE=pw
 NEXT_PUBLIC_MARKETPLACE_CONFIG_URL=https://localhost:3000/marketplace-config.json
 NEXT_PUBLIC_MARKETPLACE_SUBMIT_FORM=https://localhost:3000/marketplace-submit-form
 NEXT_PUBLIC_IS_L2_NETWORK=false
+NEXT_PUBLIC_L1_BASE_URL=
+NEXT_PUBLIC_L2_WITHDRAWAL_URL=
 NEXT_PUBLIC_AD_BANNER_PROVIDER=slise
 NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED=true
 NEXT_PUBLIC_AUTH_URL=http://localhost:3100
@@ -54,3 +59,4 @@ NEXT_PUBLIC_STATS_API_HOST=https://localhost:3004
 NEXT_PUBLIC_CONTRACT_INFO_API_HOST=https://localhost:3005
 NEXT_PUBLIC_ADMIN_SERVICE_API_HOST=https://localhost:3006
 NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=xxx
+NEXT_PUBLIC_HAS_BEACON_CHAIN=
