--- a/deploy/tools/envs-validator/tsconfig.json
+++ b/deploy/tools/envs-validator/tsconfig.json
@@ -10,6 +10,6 @@
 		"incremental": true,
 		"baseUrl": "."
 	},
-	"include": ["./schema.ts"],
+	"include": ["./index.ts"],
 	"exclude": ["node_modules"]
 }
