--- a/deploy/tools/envs-validator/package.json
+++ b/deploy/tools/envs-validator/package.json
@@ -15,6 +15,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "dotenv-cli": "^7.2.1"
+    "dotenv-cli": "^7.2.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0"
   }
 }
