--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -50,9 +50,32 @@ jobs:
       - name: Compile TypeScript
         run: yarn lint:tsc
 
+  envs_validation:
+    name: ENV variables presets validation
+    runs-on: ubuntu-latest
+    needs: [ code_quality ]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+
+      - name: Install script dependencies
+        run: cd ./deploy/tools/envs-validator && yarn --frozen-lockfile
+
+      - name: Copy secrets file
+        run: cp ./.env.example ./configs/envs/.env.secrets
+
+      - name: Run validation script
+        run: cd ./deploy/tools/envs-validator && yarn dev
+
   jest_tests:
     name: Jest tests
-    needs: [ code_quality ]
+    needs: [ code_quality, envs_validation ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -81,7 +104,7 @@ jobs:
 
   pw_tests:
     name: 'Playwright tests / Project: ${{ matrix.project }}'
-    needs: [ code_quality ]
+    needs: [ code_quality, envs_validation ]
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.35.1-focal
