--- a/deploy/tools/envs-validator/package.json
+++ b/deploy/tools/envs-validator/package.json
@@ -12,6 +12,7 @@
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
+    "typescript": "^5.1.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
