--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
+    "ethereum-blockies-base64": "^1.0.2",
     "framer-motion": "^6.5.1",
+    "gradient-avatar": "^1.0.2",
     "graphiql": "^2.2.0",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.3",
+    "identicon.js": "^2.3.3",
     "js-cookie": "^3.0.1",
     "lodash": "^4.0.0",
     "mixpanel-browser": "^2.47.0",
@@ -94,6 +97,7 @@
     "@types/csp-dev": "^1.0.0",
     "@types/d3": "^7.4.0",
     "@types/dom-to-image": "^2.6.4",
+    "@types/identicon.js": "^2.3.1",
     "@types/jest": "^29.2.0",
     "@types/js-cookie": "^3.0.2",
     "@types/mixpanel-browser": "^2.38.1",
