--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "npm": "8"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=8080 next dev",
     "dev:preset": "./tools/scripts/dev.preset.sh",
     "build": "next build",
     "build:docker": "docker build --build-arg GIT_COMMIT_SHA=$(git rev-parse --short HEAD) --build-arg GIT_TAG=$(git describe --tags --abbrev=0) -t blockscout-frontend ./",
-    "start": "next start",
+    "start": "PORT=8080 next start",
     "start:docker:local": "docker run -p 3000:3000 --env-file .env.local blockscout-frontend",
     "start:docker:preset": "./tools/scripts/docker.preset.sh",
     "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
