Allow adding capability to display alert/announcement in the new UI
Fixes #1123

--- a/configs/envs/.env.pw
+++ b/configs/envs/.env.pw
@@ -43,6 +43,7 @@ NEXT_PUBLIC_FOOTER_LINKS=
 NEXT_PUBLIC_VIEWS_BLOCK_HIDDEN_FIELDS=
 ## misc
 NEXT_PUBLIC_NETWORK_EXPLORERS=[{'title':'Bitquery','baseUrl':'https://explorer.bitquery.io/','paths':{'tx':'/goerli/tx','address':'/goerli/address','token':'/goerli/token','block':'/goerli/block'}},{'title':'Etherscan','baseUrl':'https://goerli.etherscan.io/','paths':{'tx':'/tx','address':'/address','token':'/token','block':'/block'}}]
+NEXT_PUBLIC_MAINTENANCE_ALERT_MESSAGE=
 
 # app features
 NEXT_PUBLIC_APP_ENV=testing
