--- a/configs/envs/.env.eth
+++ b/configs/envs/.env.eth
@@ -48,3 +48,10 @@ NEXT_PUBLIC_OG_IMAGE_URL=https://github.com/blockscout/frontend-configs/blob/mai
 NEXT_PUBLIC_IS_FORUM_SUPPORTED=true
 NEXT_PUBLIC_FORUM_INDEXER_URL=https://forum-blockscout.ylide.io
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=e9deead089b3383b2db777961e3fa244
+
+NEXT_PUBLIC_APP_LISTEN_PORT=80
+NEXT_PUBLIC_APP_PROTOCOL=https
+NEXT_PUBLIC_APP_HOST=bss.ylide.io
+
+NEXT_PUBLIC_API_HOST=bss.ylide.io
+NEXT_PUBLIC_API_PORT=443
