editorjs for new threads

--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "dependencies": {
     "@chakra-ui/react": "2.7.1",
     "@chakra-ui/theme-tools": "^2.0.18",
+    "@editorjs/editorjs": "2.27.2",
+    "@editorjs/header": "2.7.0",
+    "@editorjs/list": "1.8.0",
+    "@editorjs/paragraph": "2.9.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@metamask/post-message-stream": "^7.0.0",
@@ -54,6 +58,7 @@
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
+    "draft-js": "^0.11.7",
     "ethereum-blockies-base64": "^1.0.2",
     "framer-motion": "^6.5.1",
     "gradient-avatar": "^1.0.2",
@@ -76,6 +81,8 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-editor-js": "2.1.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.33.1",
     "react-identicons": "^1.2.5",
@@ -99,6 +106,7 @@
     "@types/csp-dev": "^1.0.0",
     "@types/d3": "^7.4.0",
     "@types/dom-to-image": "^2.6.4",
+    "@types/editorjs__header": "^2.6.1",
     "@types/jest": "^29.2.0",
     "@types/js-cookie": "^3.0.2",
     "@types/mixpanel-browser": "^2.38.1",
